@@ -84,6 +84,8 @@ Version 7.4  [ (to be announced) ]
         Class Perm<n>:
             - New routine hash().
             - New class constant degree.
+            - Added an alias Perm<6>::cachedOrder(), for consistency with the
+              other permutation classes Perm<2..15>.
         Class SatAnnulus:
             - Routine attachLST() now checks its preconditions, and throws
               an exception if they fail.
